ci: Add git fetch --tags to docker-build workflow
Update generate_changelog.sh to remove redundant git fetch --tags command

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -89,6 +89,7 @@ jobs:
           do
             sleep 5
           done
+          git fetch --tags
           chmod +x generate_changelog.sh
           ./generate_changelog.sh
 
