ci: Update Git push command and add tag waiting message

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -83,8 +83,8 @@ jobs:
       - name: Push Git tag
         if: success()
         run: |
-          git push origin ${{ needs.determine_version.outputs.NEXT_VERSION }}
-          echo "Waiting for tag to become available in remote repository..."
+          git push -u origin ${{ needs.determine_version.outputs.NEXT_VERSION }}
+          echo "Waiting for tag to become available in remote repository... ${{ needs.determine_version.outputs.NEXT_VERSION }}"
           while ! (git fetch --tags --all --force && git tag -l | grep ${{ needs.determine_version.outputs.NEXT_VERSION }})
           do
             sleep 5
