ci: Update generate_changelog.sh and set output variable for CHANGELOG

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -95,7 +95,8 @@ jobs:
           done
           chmod +x generate_changelog.sh
           CHANGELOG=$(./generate_changelog.sh)
-          echo "CHANGELOG=$CHANGELOG" >> "$GITHUB_OUTPUT"          
+          echo "::set-output name=CHANGELOG::${CHANGELOG}"
+        shell: bash       
 
       - name: Display release notes
         run: cat release_notes
