--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,6 +42,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GH_TOKEN }}
+          fetch-depth: 0
 
       - name: Set Git user information
         run: |
@@ -97,7 +98,7 @@ jobs:
           CHANGELOG=$(./generate_changelog.sh)
           echo "::set-output name=CHANGELOG::${CHANGELOG}"
         shell: bash       
-        
+
       - name: Create Release
         id: create_release
         uses: ncipollo/release-action@v1
