ci: Update Docker image push URLs

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -132,12 +132,13 @@ jobs:
         
       - name: Build and Push Docker Image
         run: |
+          REPO_OWNER_LOWER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')
           docker compose build aio
           docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
           docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
           docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
-          docker push ghcr.io/${{ github.repository_owner }}/${{vars.DOCKER_AIO_REPO}}:latest
-          docker push ghcr.io/${{ github.repository_owner }}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
+          docker push ghcr.io/${REPO_OWNER_LOWER}/${{vars.DOCKER_AIO_REPO}}:latest
+          docker push ghcr.io/${REPO_OWNER_LOWER}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
         env:
           DOCKER_BUILDKIT: 1
