--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -95,7 +95,7 @@ jobs:
             sleep 5
           done
           chmod +x generate_changelog.sh
-          CHANGELOG=$(./generate_changelog.sh)
+          CHANGELOG=$(./generate_changelog.sh | base64 -w 0)
           echo "::set-output name=CHANGELOG::${CHANGELOG}"
         shell: bash       
 
@@ -106,7 +106,7 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           tag: ${{ needs.determine_version.outputs.NEXT_VERSION }}
           name: Release ${{ needs.determine_version.outputs.NEXT_VERSION }}
-          body: ${{ steps.release_notes.outputs.CHANGELOG }}
+          body: ($echo "${{ steps.release_notes.outputs.CHANGELOG }}" | base64 --decode))
           draft: false
           prerelease: false
       
@@ -125,22 +125,21 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Login to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
       - name: Before Run Copy .env
         run: cp .env.example .env
         
       - name: Build and Push Docker Image
         run: |
-          REPO_OWNER_LOWER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')
           docker compose build aio
           docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
           docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
-          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ghcr.io/${REPO_OWNER_LOWER}/${{ vars.DOCKER_AIO_REPO }}:latest
-          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ghcr.io/${REPO_OWNER_LOWER}/${{ vars.DOCKER_AIO_REPO }}:${{ needs.determine_version.outputs.NEXT_VERSION }}
+          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest docker.pkg.github.com/${{ github.repository }}/${{ vars.DOCKER_AIO_REPO }}:latest
+          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest docker.pkg.github.com/${{ github.repository }}/${{ vars.DOCKER_AIO_REPO }}:${{ needs.determine_version.outputs.NEXT_VERSION }}
           docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
-          docker push ghcr.io/${REPO_OWNER_LOWER}/${{vars.DOCKER_AIO_REPO}}:latest
-          docker push ghcr.io/${REPO_OWNER_LOWER}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
+          docker push docker.pkg.github.com/${{ github.repository }}/${{vars.DOCKER_AIO_REPO}}:latest
+          docker push docker.pkg.github.com/${{ github.repository }}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
         env:
           DOCKER_BUILDKIT: 1
