ci: Update Docker image tags for GitHub Packages

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -98,7 +98,7 @@ jobs:
           CHANGELOG=$(./generate_changelog.sh | base64 -w 0)
           echo "::set-output name=CHANGELOG::${CHANGELOG}"
         shell: bash 
-        
+
       - name: Decode CHANGELOG
         id: decode_changelog
         run: |
@@ -112,7 +112,7 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           tag: ${{ needs.determine_version.outputs.NEXT_VERSION }}
           name: Release ${{ needs.determine_version.outputs.NEXT_VERSION }}
-          body: ${{ steps.release_notes.outputs.CHANGELOG }}
+          body: ${{ steps.decode_changelog.outputs.CHANGELOG }}
           draft: false
           prerelease: false
       
@@ -142,11 +142,11 @@ jobs:
           docker compose build aio
           docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
           docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
-          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest docker.pkg.github.com/${REPO_OWNER_LOWER}/${{ vars.DOCKER_AIO_REPO }}:latest
-          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest docker.pkg.github.com/${REPO_OWNER_LOWER}/${{ vars.DOCKER_AIO_REPO }}:${{ needs.determine_version.outputs.NEXT_VERSION }}
+          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest docker.pkg.github.com/${REPO_OWNER_LOWER}/${{vars.DOCKER_REPO_GITHUB_NAME}}/${{ vars.DOCKER_AIO_REPO }}:latest
+          docker tag ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest docker.pkg.github.com/${REPO_OWNER_LOWER}/${{vars.DOCKER_REPO_GITHUB_NAME}}/${{ vars.DOCKER_AIO_REPO }}:${{ needs.determine_version.outputs.NEXT_VERSION }}
           docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
-          docker push docker.pkg.github.com/${REPO_OWNER_LOWER}/${{vars.DOCKER_AIO_REPO}}:latest
-          docker push docker.pkg.github.com/${REPO_OWNER_LOWER}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
+          docker push docker.pkg.github.com/${REPO_OWNER_LOWER}/${{vars.DOCKER_REPO_GITHUB_NAME}}/${{vars.DOCKER_AIO_REPO}}:latest
+          docker push docker.pkg.github.com/${REPO_OWNER_LOWER}/${{vars.DOCKER_REPO_GITHUB_NAME}}/${{vars.DOCKER_AIO_REPO}}:${{ needs.determine_version.outputs.NEXT_VERSION }}
         env:
           DOCKER_BUILDKIT: 1
