--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -102,8 +102,13 @@ jobs:
       - name: Decode CHANGELOG
         id: decode_changelog
         run: |
-          echo "::set-output name=CHANGELOG::$(echo "${{ steps.release_notes.outputs.CHANGELOG }}" | base64 --decode)"
-        shell: bash      
+          echo "::set-output name=CHANGELOG_DECODED::$(echo "${{ steps.release_notes.outputs.CHANGELOG }}" | base64 --decode)"
+        shell: bash
+
+      - name: Debug Release Notes Output
+        run: |
+          echo "Release Notes Output: ${{ steps.decode_changelog.outputs.CHANGELOG_DECODED }}"
+        shell: bash
 
       - name: Create Release
         id: create_release
@@ -112,7 +117,7 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           tag: ${{ needs.determine_version.outputs.NEXT_VERSION }}
           name: Release ${{ needs.determine_version.outputs.NEXT_VERSION }}
-          body: ${{ steps.decode_changelog.outputs.CHANGELOG }}
+          body: ${{ steps.decode_changelog.outputs.CHANGELOG_DECODED }}
           draft: false
           prerelease: false
       
@@ -120,6 +125,9 @@ jobs:
   build_and_push_docker:
     runs-on: ubuntu-latest
     needs: [setup, determine_version, release]
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout Repository
